--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,15 @@
-FROM cora-docker-postgresql:9.6
+FROM cora-docker-postgresql:2.0-SNAPSHOT
 
 USER root
 
 RUN mkdir data
-COPY tables/* tables/
-COPY data/* data/
+#COPY sql/tables/* tables/
+#COPY sql/data/* data/
+COPY sql/tables/* sql/tables/
+COPY sql/data/* sql/data/
 COPY initdb/*.sh docker-entrypoint-initdb.d/
-RUN chmod +rx docker-entrypoint-initdb.d/*.sh && chown -R postgres: tables
-RUN chmod +rx docker-entrypoint-initdb.d/*.sh && chown -R postgres: data
+RUN chmod +rx docker-entrypoint-initdb.d/*.sh && chown -R postgres: sql
+#RUN chmod +rx docker-entrypoint-initdb.d/*.sh && chown -R postgres: data
 
 USER postgres
 
