--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	<properties>
 		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 		<outputDirectory>${project.build.directory}/docker2</outputDirectory>
+		<cora-docker-postgresql.version>10.0-SNAPSHOT</cora-docker-postgresql.version>
 	</properties>
 
 	<scm>
@@ -34,8 +35,15 @@
 		<url>https://github.com/lsu-ub-uu/diva-cora-docker-postgresql</url>
 		<tag>HEAD</tag>
 	</scm>
-
-
+	<dependencies>
+		<dependency>
+			<groupId>se.uu.ub.cora</groupId>
+			<artifactId>cora-docker-postgresql</artifactId>
+			<version>${cora-docker-postgresql.version}</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -76,6 +84,8 @@
 								<argument>build</argument>
 								<argument>-t</argument>
 								<argument>${project.artifactId}:${project.version}</argument>
+								<argument>--build-arg</argument>
+								<argument>CORA_DOCKER_VERSION=${cora-docker-postgresql.version}</argument>
 								<argument>.</argument>
 							</arguments>
 						</configuration>
