--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<properties>
 		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 		<outputDirectory>${project.build.directory}/docker2</outputDirectory>
-		<cora-docker-postgresql.version>10.0-SNAPSHOT</cora-docker-postgresql.version>
+		<cora-docker-postgresql.version>10.0.0</cora-docker-postgresql.version>
 	</properties>
 
 	<scm>
